K8s/05-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-java-app-ingress
  labels:
    app: my-java-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: my-java-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-java-app-service
            port:
              number: 8080
